Cleaned up ffmpeg related classes.